--- a/data/rules/rules.yml
+++ b/data/rules/rules.yml
@@ -17,6 +17,11 @@ rules:
   - intent: desafiar_bot
   - action: utter_soubot
 
+- rule: acao fallback
+  steps:
+  - intent: nlu_fallback
+  - action: action_default_fallback
+
 
 
 
