fix: unused intents

--- a/data/nlu/nlu.yml
+++ b/data/nlu/nlu.yml
@@ -10,6 +10,7 @@ nlu:
     - Bom dia
     - Boa tarde
     - Boa noite
+    - Oi, Boa tarde!
 
 - intent: despedida
   examples: |
@@ -17,20 +18,6 @@ nlu:
     - xau
     - bye bye
     - ate mais
-
-- intent: afirmacao
-  examples: |
-    - sim
-    - s
-    - isso
-    - é
-
-- intent: negacao
-  examples: |
-    - não
-    - nunca
-    - jamais
-    - n
 
 - intent: desafiar_bot
   examples: |
