--- a/credentials.yml
+++ b/credentials.yml
@@ -27,6 +27,11 @@ rest:
 #  token: "<bot token>"
 #  webhook_url: "<callback URL>"
 
+telegram:
+  access_token: "access_token"
+  verify: "bot_name"       # mesmo nome de usuário do bot
+  webhook_url: "https://SEU_DOMINIO/webhooks/telegram/webhook"
+
 # This entry is needed if you are using Rasa Enterprise. The entry represents credentials
 # for the Rasa Enterprise "channel", i.e. Talk to your bot and Share with guest testers.
 rasa:
