--- a/config.yml
+++ b/config.yml
@@ -12,20 +12,21 @@ language: pt
 
 pipeline:
   - name: SpacyNLP
-    model: "pt_core_news_sm"
+    model: "pt_core_news_md"
   - name: SpacyTokenizer
   - name: SpacyFeaturizer
   - name: RegexFeaturizer
   - name: LexicalSyntacticFeaturizer
   - name: CountVectorsFeaturizer
-  - name: EntitySynonymMapper
+  - name: CountVectorsFeaturizer
+    analyzer: "char_wb"
+    min_ngram: 1
+    max_ngram: 4
   - name: DIETClassifier
     epochs: 100
-    constrain_similarities: true
+  - name: EntitySynonymMapper
   - name: ResponseSelector
-    epochs: 26
-    retrieval_intent: faq
-    constrain_similarities: true
+    epochs: 100
   - name: "FallbackClassifier"
     threshold: 0.6
     ambiguity_threshold: 0.1
@@ -56,6 +57,15 @@ pipeline:
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
 policies:
+  - name: MemoizationPolicy
+  - name: RulePolicy
+  - name: UnexpecTEDIntentPolicy
+    max_history: 5
+    epochs: 100
+  - name: TEDPolicy
+    max_history: 5
+    epochs: 100
+    constrain_similarities: true
 # # No configuration for policies was provided. The following default policies were used to train your model.
 # # If you'd like to customize them, uncomment and adjust the policies.
 # # See https://rasa.com/docs/rasa/policies for more information.
