--- a/credentials.yml
+++ b/credentials.yml
@@ -3,6 +3,7 @@
 # https://rasa.com/docs/rasa/messaging-and-voice-channels
 
 rest:
+  cors: "*"
 #  # you don't need to provide anything here - this channel doesn't
 #  # require any credentials
 
@@ -27,10 +28,10 @@ rest:
 #  token: "<bot token>"
 #  webhook_url: "<callback URL>"
 
-telegram:
-  access_token: "access_token"
-  verify: "bot_name"       # mesmo nome de usuário do bot
-  webhook_url: "https://SEU_DOMINIO/webhooks/telegram/webhook"
+#telegram:
+#  access_token: "8040579065:AAFGfZERDDFd4r-z_oOU4o5EtI8c-VpnUlQ"
+#  verify: "ufc_bicho_bot"
+#  webhook_url: "https://f4a3-200-129-39-56.ngrok-free.app/webhooks/telegram/webhook"
 
 # This entry is needed if you are using Rasa Enterprise. The entry represents credentials
 # for the Rasa Enterprise "channel", i.e. Talk to your bot and Share with guest testers.
