feat: improve data

--- a/data/nlu/cursos.yml
+++ b/data/nlu/cursos.yml
@@ -261,5 +261,14 @@ nlu:
     - O que são as horas complementares
     - O que é horas complementares
     - e horas complementares?
+    - Como consigo horas complementares
+    - Como ganhar horas complementares
+    - Como faço para conseguir horas complementares
+    - Como obter horas complementares
+    - De que forma eu posso ganhar horas complementares
+    - Quero saber como conseguir horas complementares
+    - Como conquistar horas complementares
+    - Como obter minhas horas complementares
+
 
 
