feat: improve location intents

--- a/data/nlu/localizacao.yml
+++ b/data/nlu/localizacao.yml
@@ -59,6 +59,10 @@ nlu:
       - Onde foi alocada minha aula?
       - Como descobrir em qual sala terei aula?
       - Onde olho minha alocação de salas?
+      - alocação de salas
+      - salas
+      - aulas
+      - alocação de aulas
 
 
 
