--- a/data/nlu/quixada.yml
+++ b/data/nlu/quixada.yml
@@ -94,5 +94,6 @@ nlu:
       - Me dá o link do calendário 2025
       - calendário 2025
       - Onde vejo as datas letivas?
+      - calendario
 
 
