feat: add more intents

--- a/data/nlu/quixada.yml
+++ b/data/nlu/quixada.yml
@@ -95,5 +95,8 @@ nlu:
       - calendário 2025
       - Onde vejo as datas letivas?
       - calendario
+      - que dia é as ferias
+      - quando começa o recesso?
+      - que dia é os encontros universitarios
 
 
