fix: improve intents and docs

--- a/data/nlu/quixada.yml
+++ b/data/nlu/quixada.yml
@@ -98,5 +98,22 @@ nlu:
       - que dia é as ferias
       - quando começa o recesso?
       - que dia é os encontros universitarios
+      - cadê o calendário da universidade?
+      - como vejo o calendário letivo?
+      - já saiu o calendário de 2025?
+      - quando é que começam as aulas?
+      - tem como me mandar o calendário da UFC?
+      - quais são os dias de folga da faculdade?
+      - onde tá o calendário do próximo semestre?
+      - e o calendário do ano que vem, já tem?
+      - quando é o início do período letivo?
+      - que dia acaba o semestre?
+      - já tem data pros encontros universitários?
+      - quais os dias que não tem aula?
+      - onde encontro o cronograma acadêmico?
+      - quando vão ser as férias?
+      - o calendário foi atualizado?
+      - tem o cronograma do semestre?
+      - me mostra as datas do período 2025.1
 
 
